[package]
name = "assemblyai-cli"
version = "0.1.4"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
base64 = "0.22.1"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tempfile = "3.16.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["fs", "macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.13", features = ["io"] }
url = "2.5.4"

[dev-dependencies]
assert_cmd = "2.0.16"
dotenvy = "0.15.7"
predicates = "3.1.3"
